tests/ui/abi/removed-wasm-abi.stderr
error[E0703]: invalid ABI: found `wasm`
  --> $DIR/removed-wasm-abi.rs:1:8
   |
LL | extern "wasm" fn test() {}
   |        ^^^^^^ invalid ABI
   |
   = note: invoke `rustc --print=calling-conventions` for a full list of supported calling conventions
   = note: non-standard wasm ABI is no longer supported

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0703`.
