tests/ui/abi/removed-wasm-abi.rs
extern "wasm" fn test() {}
//~^ ERROR invalid ABI: found `wasm`

fn main() {}
